# Dochi

./: HowToInstall.txt  LICENSE  Main.hs  Makefile  README.textile  TODO.org  core.chi  dochi-mode.el  dochi.cabal  prelude.chi  test.chi
Dochi/: Compile.hs  Core.hs  IC.hs  IMC.hs  IR.hs  Interpreter.hs  Main.hs  Parse.hs  REPL.hs  Util.hs
