Name: dochi
Version: 0.0.1
Description: Concatenative Language
License: GPL
License-file: LICENSE
Author: Kevin Mahoney
Maintainer: kevin@kevinmahoney.co.uk
Build-Type: Simple
Cabal-Version: >=1.2

library
  Build-Depends: base, mtl, containers, parsec, editline, random
  GHC-Options: -fglasgow-exts
  Exposed-Modules:
        Dochi.Interpreter
        Dochi.Util
        Dochi.Core
        Dochi.IR
        Dochi.Parse
        Dochi.REPL
        Dochi.Compile

executable dochi
  Main-is: Main.hs
  GHC-Options: -fglasgow-exts
